index.css
body
{
    font-family: "LXGW WenKai TC", sans-serif;
    font-weight: 400;
    font-style: normal;
    background-color: skyblue;
}

main
{
    background-color: white;
}

.section
{
    padding: 40px 20px;
}

.home
{
    background-color: skyblue;
    height: 576px;
}

.section.profile
{
    margin-top: 80px;
}

.section.profile img
{
    height: 150px;
    margin-bottom: 30px;
    border-radius: 50%;
}

.section.expertise img
{
    border-radius: 50%;
    background-color: #75A47F;
}

ul
{
    padding-left: 0rem;
}

ul li
{
    line-height: 2rem;
}

.list-topic{
    text-align: center;
    margin-bottom: 10px;
    color: #BACD92;
}

.text
{
    max-width: 500px;
    line-height: 2rem;
    display: block;
}

h1
{
    color: #75A47F;
    text-align: center;
}

h2
{
    color: #75A47F;
    margin: 50px 0px 50px 0px;
    text-align: center;
}

.work.section .card{
    height: 100%;
}

.center-block{
    display: block;
    margin-right: auto;
    margin-left: auto;
}

.section.contact .btn {
    margin-top: 50px;
    margin-bottom: 50px;
    --bs-btn-color: #fff;
    --bs-btn-bg: #75A47F;
    --bs-btn-border-color: #BACD92;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #BACD92;
    --bs-btn-hover-border-color: #75A47F;
    --bs-btn-focus-shadow-rgb: 49, 132, 253;
    --bs-btn-active-color: #fff;
    --bs-btn-active-bg: #75A47F;
    --bs-btn-active-border-color: #75A47F;
    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
    --bs-btn-disabled-color: #fff;
    --bs-btn-disabled-bg: #75A47F;
    --bs-btn-disabled-border-color: #75A47F;
}

footer
{
    background-color: skyblue;
    padding: 20px;
    text-align: center;
}

/* md */
@media (min-width: 768px)
{
    .list-topic
    {
        text-align: left;
    }
    
    .section
    {
        padding-left: 100px;
        padding-right: 100px;
    }
}

